[gd_scene load_steps=28 format=3 uid="uid://6pupuwm17g0s"]

[ext_resource type="Texture2D" uid="uid://bies723fywnln" path="res://assets/gui/panel_nine_patch.png" id="1_fyknj"]
[ext_resource type="Script" path="res://scripts/gui.gd" id="1_nbn27"]
[ext_resource type="Texture2D" uid="uid://bg2rtyguchoo4" path="res://assets/gui/texture_panel.png" id="2_0jeku"]
[ext_resource type="Texture2D" uid="uid://d28vrx8f7xd88" path="res://assets/gui/buttons/plus_button.png" id="3_y62pg"]
[ext_resource type="Texture2D" uid="uid://dvdhu1wyq6b2c" path="res://assets/gui/buttons/plus_button_pressed.png" id="4_gc4dv"]
[ext_resource type="Texture2D" uid="uid://dbjck5mvoxa77" path="res://assets/gui/buttons/minus_button.png" id="5_cb1qb"]
[ext_resource type="Texture2D" uid="uid://8ntdvpvxnavk" path="res://assets/gui/buttons/minus_button_pressed.png" id="6_tgedc"]
[ext_resource type="Texture2D" uid="uid://dv2a1uggr0ujg" path="res://assets/gui/buttons/menu_button.png" id="7_7i4o6"]
[ext_resource type="Texture2D" uid="uid://dxh0bkunl6tpc" path="res://assets/gui/buttons/menu_button_pressed.png" id="8_7xvw7"]
[ext_resource type="Texture2D" uid="uid://dm3562o1l3bwr" path="res://assets/gui/buttons/reset_button.png" id="9_d8nby"]
[ext_resource type="Texture2D" uid="uid://cybnttui2rhgu" path="res://assets/gui/buttons/reset_button_pressed.png" id="10_vxg0r"]
[ext_resource type="PackedScene" uid="uid://kkihhxlc0qvu" path="res://scenes/menu.tscn" id="12_vhr31"]
[ext_resource type="Script" path="res://scenes/HotBar.gd" id="13_7ri5t"]
[ext_resource type="PackedScene" uid="uid://j581qtxojsk4" path="res://scenes/slot.tscn" id="14_basvc"]
[ext_resource type="Resource" uid="uid://b30hfutowckdo" path="res://resources/elements/air.tres" id="15_i6uu7"]
[ext_resource type="Resource" uid="uid://bqtqat0r5ruxs" path="res://resources/elements/water.tres" id="16_rxdii"]
[ext_resource type="Resource" uid="uid://ca3g6csr0pjsa" path="res://resources/elements/fire.tres" id="17_pfmeq"]
[ext_resource type="Resource" uid="uid://f6yh6aee6f0j" path="res://resources/elements/sand.tres" id="18_u71gb"]
[ext_resource type="Resource" uid="uid://cxlfnmankioeq" path="res://resources/elements/rock.tres" id="19_k0jac"]
[ext_resource type="Resource" uid="uid://c0innkhioihaw" path="res://resources/elements/fuse.tres" id="20_roytw"]
[ext_resource type="Resource" uid="uid://pn5nwvxuv2op" path="res://resources/elements/honey.tres" id="21_e1mk6"]
[ext_resource type="Resource" uid="uid://tw0sqv507x4e" path="res://resources/elements/ice.tres" id="22_113bd"]
[ext_resource type="Resource" uid="uid://bx58ueancimdk" path="res://resources/elements/methane.tres" id="23_q8alk"]
[ext_resource type="Resource" uid="uid://bel5kx7t3mqax" path="res://resources/elements/oil.tres" id="24_nxyo3"]
[ext_resource type="Resource" uid="uid://bwqxsw4s3j7yy" path="res://resources/elements/water_drain.tres" id="25_f5lqb"]
[ext_resource type="Resource" uid="uid://cos57wttbfwmm" path="res://resources/elements/water_generator.tres" id="26_nrij3"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tkhw3"]
texture = ExtResource("1_fyknj")
texture_margin_left = 2.0
texture_margin_top = 2.0
texture_margin_right = 2.0
texture_margin_bottom = 2.0

[node name="GUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_nbn27")

[node name="FPSLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -7.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = 8.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 2
text = "60"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TooltipLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -8.0
offset_top = 4.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 3
horizontal_alignment = 1
vertical_alignment = 1

[node name="Border" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_fyknj")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="BottomPanel" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 52.0
offset_right = 125.0
offset_bottom = 69.0
mouse_filter = 0
texture = ExtResource("2_0jeku")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -13.0
offset_top = -19.0
offset_right = -5.0
offset_bottom = -3.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 2

[node name="PlusButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("3_y62pg")
texture_pressed = ExtResource("4_gc4dv")
ignore_texture_size = true
stretch_mode = 5

[node name="MinusButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("5_cb1qb")
texture_pressed = ExtResource("6_tgedc")
ignore_texture_size = true
stretch_mode = 5

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -19.0
offset_right = 13.0
offset_bottom = -3.0
grow_vertical = 0
theme_override_constants/separation = 2

[node name="MenuButton" type="TextureButton" parent="VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("7_7i4o6")
texture_pressed = ExtResource("8_7xvw7")
ignore_texture_size = true
stretch_mode = 5

[node name="ResetButton" type="TextureButton" parent="VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("9_d8nby")
texture_pressed = ExtResource("10_vxg0r")
ignore_texture_size = true
stretch_mode = 5

[node name="Menu" parent="." node_paths=PackedStringArray("panel_container") instance=ExtResource("12_vhr31")]
visible = false
layout_mode = 1
panel_container = NodePath("../PanelContainer")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
offset_left = 23.0
offset_top = 54.0
offset_right = 31.0
offset_bottom = 62.0
theme_override_styles/panel = SubResource("StyleBoxTexture_tkhw3")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="HotBar" type="HBoxContainer" parent="PanelContainer/MarginContainer" node_paths=PackedStringArray("tooltip_label")]
layout_mode = 2
size_flags_vertical = 8
mouse_filter = 0
theme_override_constants/separation = 1
alignment = 1
script = ExtResource("13_7ri5t")
slot_scene = ExtResource("14_basvc")
elements_in_hotbar = Array[Resource("res://resources/elements/element_template.gd")]([ExtResource("15_i6uu7"), ExtResource("16_rxdii"), ExtResource("17_pfmeq"), ExtResource("18_u71gb"), ExtResource("19_k0jac"), ExtResource("20_roytw"), ExtResource("21_e1mk6"), ExtResource("22_113bd"), ExtResource("23_q8alk"), ExtResource("24_nxyo3"), ExtResource("25_f5lqb"), ExtResource("26_nrij3")])
tooltip_label = NodePath("../../../TooltipLabel")

[connection signal="pressed" from="VBoxContainer/PlusButton" to="." method="_on_plus_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MinusButton" to="." method="_on_minus_button_pressed"]
[connection signal="pressed" from="VBoxContainer2/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="VBoxContainer2/ResetButton" to="." method="_on_reset_button_pressed"]
